// Copyright (c) 2021 Contributors to the Eclipse Foundation
//
// See the NOTICE file(s) distributed with this work for additional
// information regarding copyright ownership.
//
// This program and the accompanying materials are made available under the
// terms of the Eclipse Public License 2.0 which is available at
// http://www.eclipse.org/legal/epl-2.0
//
// SPDX-License-Identifier: EPL-2.0

syntax = "proto3";

package github.com.eclipse_kanto.container_management.containerm.api.types.containers;

option go_package = "github.com/eclipse-kanto/container-management/containerm/api/types/containers;containers";

// Represents the containers restart policy
message RestartPolicy {

    // maximum retry count
    int64 maximum_retry_count = 1;

    // retry timeout
    int64 retry_timeout = 2;

    // type - always, no, on-failure, unless-stopped
    string type = 3;
}